# Mono.Zeroconf

./: .gitattributes  .gitignore  Mono.Zeroconf.sln  configure.ac  shamrock.m4
src/: Makefile.include
src/MZClient/: MZClient.csproj  Makefile.am
src/Mono.Zeroconf/: Makefile.am  Mono.Zeroconf.csproj
src/Mono.Zeroconf.Providers.Avahi/: Makefile.am
src/Mono.Zeroconf.Providers.AvahiDBus/: Makefile.am  Mono.Zeroconf.Providers.AvahiDBus.csproj
src/Mono.Zeroconf.Providers.AvahiDBus/Mono.Zeroconf.Providers.AvahiDBus/: BrowseService.cs  DBusManager.cs  RegisterService.cs  ServiceBrowser.cs
src/Mono.Zeroconf.Providers.Bonjour/: Makefile.am  Mono.Zeroconf.Providers.Bonjour.csproj
src/Mono.Zeroconf.Providers.Bonjour/Mono.Zeroconf.Providers.Bonjour/: BrowseService.cs
